fixed all the alignment bugs

--- a/jas-website-react/src/App.css
+++ b/jas-website-react/src/App.css
@@ -6,7 +6,7 @@ body {
 .hero-section {
   /* scroll-snap-align: center; */
   width: 100%;
-  /* height: 100vh; */
+  height: 100vh;
   margin-top: -81px;
 }
 
@@ -17,6 +17,7 @@ body {
 }
 
 .portfolio-section {
+  width: 100%;
   height: auto;
 }
 
