--- a/jas-website-react/src/components/css/PortfolioSection.css
+++ b/jas-website-react/src/components/css/PortfolioSection.css
@@ -29,6 +29,7 @@
     width: 100%;
     height: 100%;
     justify-content: center;
+    align-items: center;
 }
 
 .portfolio-container {
@@ -36,5 +37,6 @@
     column-gap: 5px;
     margin: 0 auto;
     max-width: 100%;
+    text-align: center;
 }
 
